<resources>
  <string name="app_name">HelloKotlin</string>
  <string name="hello_world">Hello World!</string>
  <string name="ask_name">What is your name?</string>
  <string name="ask_register_data">Enter your details to create an account</string>
  <string name="hint_name">Name</string>
  <string name="hint_last_name">Last Name</string>
  <string name="ask_birthday">Birthday</string>
  <string name="register_title">Register</string>
  <string name="login_title">Login</string>
  <string name="menu_register_save">Save</string>
  <string name="toast_save_register">Save register</string>
  <string name="call_fepade">Call to FEPADE</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="username_error">Error in username</string>
  <string name="password_error">Invalid password</string>
  <string name="call_ws">Call Web Service</string>
</resources>