<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <data>
    <variable
        name="viewModel"
        type="mx.edu.ittehuacan.hellokotlin.login.LoginViewModel" />
  </data>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="@dimen/login_padding"
      tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/itt" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:hint="@string/username">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textUsername"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textVisiblePassword"
          android:text="@={ viewModel.user }" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:hint="@string/password">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@={ viewModel.pass }"
          android:inputType="text|textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{ () -> viewModel.doLogin() }"
        android:text="@string/login_title" />

  </LinearLayout>
</layout>